--- a/templates/master.html
+++ b/templates/master.html
@@ -4,7 +4,7 @@
 
 <head>
 	{% block head %}
-	<title>{% block title %}{% endblock %}</title>
+	<title>On Track - {% block title %}{% endblock %}</title>
 	<link type='text/css' rel='stylesheet' href="../static/main.css"></link>
 	{% endblock %}
 </head>
@@ -16,20 +16,21 @@
 
 	<div class="navbar">
 		<ul>
-			<li>Home</li>
-			<li>Class View</li>
-			<li>Login</li>
+			<li><a href="/">Home</a></li>
+			<li><a href="/class/0">Class View</a></li>
+			<li><a href="/data">Manage Data</a></li>
+			<li><a href="/login">Login</a></li>
 		</ul>
 	</div>
+</div>
 
-	<div id="content">
-		{% block content %}
-		{% endblock %}
-	</div>
+<div id="content">
+	{% block content %}
+	{% endblock %}
+</div>
 
-	<div class="footer">
-		<p>Tetrabyte Information Systems, 2016</p>
-	</div>
+<div class="footer">
+	<p>Tetrabyte Information Systems, 2016</p>
 </div>
 
 </body>
