--- a/templates/class.html
+++ b/templates/class.html
@@ -10,11 +10,11 @@
 {% block content %}
 <div id="filters">
 	<form>
-		<h3>Graduating Class</h3>
-		<input type="checkbox" name="year0" value="2016">2016<br>
-		<input type="checkbox" name="year1" value="2017">2017<br>
-		<input type="checkbox" name="year2" value="2018">2018<br>
-		<input type="checkbox" name="year3" value="2019">2019<br>
+		<h3>Grade</h3>
+		<input type="checkbox" name="grade" value="12">12<br>
+		<input type="checkbox" name="grade" value="11">11<br>
+		<input type="checkbox" name="grade" value="10">10<br>
+		<input type="checkbox" name="grade" value="9">9<br>
 	
 		<h3>Courses</h3>
 		<button class="add-class">Add Class</button>
@@ -25,19 +25,30 @@
 
 <div id="results">
 	<table>
-		<tr><th>OSIS</th><th>Name</th><th>Year</th></tr>
-		<tr><td>123456789</td><td>Ariel Levy</td><td>2016</td></tr>
+		<tr><th>OSIS</th><th>Name</th><th>Grade</th></tr>
+		<tr class="clickable-student" data-href="/student/123456789">
+			<td>123456789</td>
+			<td>Levy</td>
+			<td>Ariel</td>
+			<td>12</td>
+			<td>7CC</td>
+		</tr>
 	{% for student in students %}
 		<!-- 
-		OSIS - student[0]
-		Name - student[1]
-		Year - student[2]
+		Javascript for linking to student page http://stackoverflow.com/questions/17147821/how-to-make-a-whole-row-in-a-table-clickable-as-a-link
+		jQuery(document).ready(function($) {
+		    $(".clickable-row").click(function() {
+		        window.document.location = $(this).data("href");
+		    });
+		});
 		-->
-		<a href="/student/{{student[0]}}"><tr>
-			<td>{{student[0]}}</td>
-			<td>{{student[1]}}</td>
-			<td>{{student[2]}}</td>
-		</tr></a>
+		<tr class="clickable-student" data-href="/student/{{ student.osis }}">
+			<td>{{ student.osis }}</td>
+			<td>{{ student.lastn }}</td>
+			<td>{{ student.firstn }}</td>
+			<td>{{ student.grade }}</td>
+			<td>{{ student.offcl }}</td>
+		</tr>
 	{% endfor %}
 	</table>
 </div>
