modified student info table

--- a/templates/class.html
+++ b/templates/class.html
@@ -25,11 +25,17 @@
 
 <div id="results">
 	<table>
-		<tr><th>OSIS</th><th>Name</th><th>Grade</th></tr>
+		<tr>
+			<th>OSIS</th>
+			<th>Last Name</th>
+			<th>First Name</th>
+			<th>Grade</th>
+			<th>Off Class</th>
+		</tr>
 		<tr class="clickable-student" data-href="/student/123456789">
 			<td>123456789</td>
-			<td>Levy</td>
-			<td>Ariel</td>
+			<td>Rachmaninoff</td>
+			<td>Sergei Vasilievich</td>
 			<td>12</td>
 			<td>7CC</td>
 		</tr>
