student page basic

--- a/templates/student.html
+++ b/templates/student.html
@@ -8,6 +8,18 @@
 {% endblock %}
 
 {% block content %}
+<h2>{{ profile.lastn }}, {{ profile.firstn }}</h2>
+<h3>Grade {{ profile.grade }}</h3>
+<h2>{{ profile.osis }}</h2>
+<h3>{{ profile.offcl }}</h3>
+<br><br>
 
-
+<table>
+	<tr><th>Art</th><td>{{ courses[0] }}</td></tr>
+	<tr><th>Music</th><td>{{ courses[1] }}</td></tr>
+	<tr><th>Intro CS</th><td>{{ courses[2] }}</td></tr>
+	<tr><th>Drafting</th><td>{{ courses[3] }}</td></tr>
+	<tr><th>Tech</th><td>{{ courses[4] }}</td></tr>
+	<tr><th>Health</th><td>{{ courses[5] }}</td></tr>
+</table>
 {% endblock %}
