--- a/templates/login.html
+++ b/templates/login.html
@@ -3,12 +3,14 @@
 {% block title %}Login{% endblock %}
 
 {% block content %}
-<h2>Login</h2>
+<div id="login">
+	<h2>Login</h2>
 
-<form method="post" action="/login">
-	<input id="user" placeholder="Username">
-	<input id="pass" placeholder="Password">
-	<button type="submit" name="action">Submit</button>
-</form>
+	<form method="post" action="/login">
+		<input type="text" id="user" placeholder="Username"><br>
+		<input type="text" id="pass" placeholder="Password"><br>
+		<button class="submit" type="submit" name="action">Submit</button>
+	</form>
+</div>
 {% endblock %}
 
