--- a/static/class.css
+++ b/static/class.css
@@ -1,8 +1,18 @@
 #filters {
 	float: left;
-	width: 30%;
-	min-width: 300px;
+	width: 25%;
+	min-width: 250px;
 	margin: 0px;
+	margin-right: 5%;
+}
+
+#filters form {
+	font-size: 15px;
+}
+
+#filters form h3 {
+	margin: 15px 0px 0px;
+	font-size: 16px;
 }
 
 #results {
