--- a/static/main.css
+++ b/static/main.css
@@ -12,6 +12,11 @@ h1, h2, h3 {
 	line-height: 1.2;
 }
 
+.header {
+	width: 100%;
+	height: 100px;
+}
+
 .header h1 {
 	float: left;
 	padding: 0px;
@@ -20,7 +25,9 @@ h1, h2, h3 {
 
 .navbar {
 	float: right;
-	padding-bottom: 30px;
+	padding: 20px 0px 20px;
+	position: relative;
+	bottom: 40px;
 }
 
 .navbar ul {
@@ -31,12 +38,13 @@ h1, h2, h3 {
 
 .navbar li {
 	display: inline;
-	margin: 0px 5px 0px;
+	padding: 20px 15px 20px;
 }
 
 .navbar li a {
 	color: #00E;
 	text-decoration: none;
+	font-size: 15px;
 }
 
 .navbar li a:hover {
@@ -56,4 +64,83 @@ h1, h2, h3 {
 
 .footer p {
 	font-size: 12px;
+}
+
+button {
+	margin: 5px 0px 5px;
+	padding: 5px;
+	font-size: 15px;
+	border-radius: 4px;
+	border: 2px solid #666;
+}
+
+button:hover {
+	background-color: #666;
+	color: white;
+}
+
+button.submit {
+	width: 100%;
+	margin-top: 20px;
+}
+
+button.submit:active {
+	background-color: #F44336;
+	border-color: #F44336;
+}
+
+input {
+	margin: 5px 0px 5px;
+	padding: 5px;
+	font-size: 15px;
+	border: none;
+	border-bottom: 2px solid #666;
+	background-color: inherit;
+}
+
+input[type=checkbox] {
+	height: 15px;
+	margin-right: 5px;
+}
+
+input[type=text]:focus {
+	border-bottom: 2px solid #F44336;
+}
+
+a.icon {
+	float: left;
+	clear: both;
+	font-size: 20px;
+	padding: 15px 0px 15px;
+	text-decoration: none;
+	color: #333;
+}
+
+a.icon:hover {
+	text-decoration: underline;
+}
+
+.icon img {
+	width: 40px;
+	height: 40px;
+	float: left;
+	clear: both;
+	margin-right: 15px;
+	position: relative;
+	bottom: 5px;
+}
+
+#login {
+	width: 40%;
+	min-width: 400px;
+	margin: 0 auto 0;
+	text-align: center;
+}
+
+#login input {
+	width: 97.5%;
+}
+
+.right {
+	float: right;
 }
