--- a/templates/student.html
+++ b/templates/student.html
@@ -4,7 +4,7 @@
 
 {% block head %}
 {{ super() }}
-<link type="text/css" rel="stylesheet" href="../static/student.css"></link>
+<link type="text/css" rel="stylesheet" href="{{ url_for('static', filename='student.css') }}"></link>
 {% endblock %}
 
 {% block content %}
