changed filter options

--- a/templates/student.html
+++ b/templates/student.html
@@ -17,7 +17,7 @@
 <table>
 	<tr><th>Art</th><td>{{ courses[0] }}</td></tr>
 	<tr><th>Music</th><td>{{ courses[1] }}</td></tr>
-	<tr><th>Intro CS</th><td>{{ courses[2] }}</td></tr>
+	<tr><th>Intro CS 1</th><td>{{ courses[2] }}</td></tr>
 	<tr><th>Drafting</th><td>{{ courses[3] }}</td></tr>
 	<tr><th>Tech</th><td>{{ courses[4] }}</td></tr>
 	<tr><th>Health</th><td>{{ courses[5] }}</td></tr>
