--- a/templates/class.html
+++ b/templates/class.html
@@ -16,9 +16,13 @@
 		<input type="checkbox" name="grade" value="10">10<br>
 		<input type="checkbox" name="grade" value="9">9<br>
 	
-		<h3>Select Course(s):</h3>
-		<input type="text" id="class" placeholder="Add Course Code">
-		<button class="right" id="add-class">+</button>
+		<h3>Select Missing Requirement(s):</h3>
+		<input type="checkbox" name="grade" value="Art">Art<br>
+		<input type="checkbox" name="grade" value="Music">Music<br>
+		<input type="checkbox" name="grade" value="Intro CS 1">Intro CS 1<br>
+		<input type="checkbox" name="grade" value="Drafting">Drafting<br>
+		<input type="checkbox" name="grade" value="Tech">Tech<br>
+		<input type="checkbox" name="grade" value="Health">Health<br>
 
 		<button class="submit" type="submit" name="action">Update</button>
 	</form>
