--- a/templates/student.html
+++ b/templates/student.html
@@ -19,7 +19,8 @@
 	<tr><th>Music</th><td>{{ courses[1] }}</td></tr>
 	<tr><th>Intro CS 1</th><td>{{ courses[2] }}</td></tr>
 	<tr><th>Drafting</th><td>{{ courses[3] }}</td></tr>
-	<tr><th>Tech</th><td>{{ courses[4] }}</td></tr>
-	<tr><th>Health</th><td>{{ courses[5] }}</td></tr>
+	<tr><th>5-Tech</th><td>{{ courses[4] }}</td></tr>
+	<tr><th>10-Tech</th><td>{{ courses[5] }}</td></tr>
+	<tr><th>Health</th><td>{{ courses[6] }}</td></tr>
 </table>
 {% endblock %}
