--- a/templates/class.html
+++ b/templates/class.html
@@ -21,7 +21,8 @@
 		<input type="checkbox" name="grade" value="Music">Music<br>
 		<input type="checkbox" name="grade" value="Intro CS 1">Intro CS 1<br>
 		<input type="checkbox" name="grade" value="Drafting">Drafting<br>
-		<input type="checkbox" name="grade" value="Tech">Tech<br>
+		<input type="checkbox" name="grade" value="5-Tech">5-Tech<br>
+		<input type="checkbox" name="grade" value="10-Tech">10-Tech<br>
 		<input type="checkbox" name="grade" value="Health">Health<br>
 
 		<button class="submit" type="submit" name="action">Update</button>
