--- a/static/class.css
+++ b/static/class.css
@@ -15,6 +15,24 @@
 	font-size: 16px;
 }
 
+.search {
+	float: right;
+}
+
+.search input {
+	margin: 0px 10px 0px 0px;
+	width: 100px;
+}
+
+#filters input[name="grade"] {
+	margin-left: 10px;
+}
+
+#filters table {
+	width: 100%;
+	text-align: center;
+}
+
 #results {
 	float: right;
 	width: 70%;
