--- a/templates/master.html
+++ b/templates/master.html
@@ -16,10 +16,9 @@
 
 	<div class="navbar">
 		<ul>
-			<li><a href="/">Home</a></li>
 			<li><a href="/class/0">Class View</a></li>
 			<li><a href="/data">Database</a></li>
-			<li><a href="/login">Login</a></li>
+			<li><a href="/login">Logout</a></li>
 		</ul>
 	</div>
 </div>
