--- a/templates/upload.html
+++ b/templates/upload.html
@@ -3,9 +3,13 @@
 {% block title %}Upload Data{% endblock %}
 
 {% block content %}
-<form action="/upload/" method="POST" enctype="multipart/form-data">
-    <input type="file" name="file" />
-    <input type="submit"/>
-</form>
+<div align="center">
+    <h2> Upload an Excel File: </h2>
+    <form action="/upload/" method="POST" enctype="multipart/form-data">
+        <input type="file" name="file" />
+        <br>
+        <input type="submit"/>
+    </form>
+</div>
 
 {% endblock %}
