--- a/static/main.css
+++ b/static/main.css
@@ -58,17 +58,19 @@ h1, h2, h3 {
 }
 
 .footer {
+    background-color: #F3F3F3;
 	clear: both;
 	position: fixed;
 	bottom: 0px;
-	left: 0px;
-	width: 100%;
+	right: 0px;
+	z-index:3;
 }
 
 .footer p {
 	font-size: 12px;
 	float: right;
 	margin-right: 12px;
+	margin-left: 12px;
 }
 
 button {
