Finish student view/course-suggestions and class view filters

--- a/static/main.css
+++ b/static/main.css
@@ -58,7 +58,7 @@ h1, h2, h3 {
 }
 
 .footer {
-    background-color: #F3F3F3;
+    background-color:#EEE;
 	clear: both;
 	position: fixed;
 	bottom: 0px;
