--- a/templates/class.html
+++ b/templates/class.html
@@ -16,7 +16,7 @@
         </form>
     </div>
 
-    <form>
+    <form style="float:left;">
         <h3>Select Grade(s):</h3>
         <input type="checkbox" {{ "checked='checked'" if not boxes
             or boxes['grade-12'] == ['on'] }} name="grade-12">12
