--- a/templates/data.html
+++ b/templates/data.html
@@ -13,6 +13,11 @@
     Export course database in Excel file
 </a>
 
+<a class="icon" href="{{ url_for('static', filename='reqs.json') }}">
+    <img src="{{ url_for('static', filename='grad.png') }}" />
+    Download graduation requirements in JSON file
+</a>
+
 <a class="icon" href="/update_reqs">
     <img src="{{ url_for('static', filename='grad.png') }}" />
     Update graduation requirements in JSON file
