--- a/templates/class.html
+++ b/templates/class.html
@@ -29,10 +29,17 @@
             or boxes['grade-9'] == ['on'] }} name="grade-9">9
 
         <h3>Select Requirement Status:</h3>
-        <table>
-            <tr><th></th><th>Fulfilled</th><th>Missing</th><th>Failed</th></tr>
+        <input type="radio" checked="checked" name="logic" value="and">AND
+        <input type="radio" name="logic" value="or">OR
+        <table id="toggle-filters">
             <tr>
-                <th>Music</th>
+                <th><input id="toggle-all" type="checkbox" onClick="toggleBoxes(this)" /></th>
+                <th onClick="toggleCol('fulfilled')">Fulfilled</th>
+                <th onClick="toggleCol('missing')">Missing</th>
+                <th onClick="toggleCol('failed')">Failed</th>
+            </tr>
+            <tr>
+                <th onClick="toggleRow(0)">Music</th>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
                     or boxes['0-fulfilled'] == ['on'] }} name="0-fulfilled"></td>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
@@ -41,7 +48,7 @@
                     or boxes['0-failed'] == ['on'] }} name="0-failed"></td>
             </tr>
             <tr>
-                <th>Art</th>
+                <th onClick="toggleRow(1)">Art</th>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
                     or boxes['1-fulfilled'] == ['on'] }} name="1-fulfilled"></td>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
@@ -50,7 +57,7 @@
                     or boxes['1-failed'] == ['on'] }} name="1-failed"></td>
             </tr>
             <tr>
-                <th>Intro CS 1</th>
+                <th onClick="toggleRow(2)">Intro CS 1</th>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
                     or boxes['2-fulfilled'] == ['on'] }} name="2-fulfilled"></td>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
@@ -59,7 +66,7 @@
                     or boxes['2-failed'] == ['on'] }} name="2-failed"></td>
             </tr>
             <tr>
-                <th>Drafting</th>
+                <th onClick="toggleRow(3)">Drafting</th>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
                     or boxes['3-fulfilled'] == ['on'] }} name="3-fulfilled"></td>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
@@ -68,7 +75,7 @@
                     or boxes['3-failed'] == ['on'] }} name="3-failed"></td>
             </tr>
             <tr>
-                <th>5-Tech</th>
+                <th onClick="toggleRow(4)">5-Tech</th>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
                     or boxes['4-fulfilled'] == ['on'] }} name="4-fulfilled"></td>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
@@ -77,7 +84,7 @@
                     or boxes['4-failed'] == ['on'] }} name="4-failed"></td>
             </tr>
             <tr>
-                <th>10-Tech</th>
+                <th onClick="toggleRow(5)">10-Tech</th>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
                     or boxes['5-fulfilled'] == ['on'] }} name="5-fulfilled"></td>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
@@ -86,7 +93,7 @@
                     or boxes['5-failed'] == ['on'] }} name="5-failed"></td>
             </tr>
             <tr>
-                <th>Health</th>
+                <th onClick="toggleRow(6)">Health</th>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
                     or boxes['6-fulfilled'] == ['on'] }} name="6-fulfilled"></td>
                 <td><input type="checkbox" {{ "checked='checked'" if not boxes
@@ -120,4 +127,50 @@
     {% endfor %}
     </table>
 </div>
+
+<script language="JavaScript">
+var toggleBoxes = function toggleBoxes() {
+    console.log("toggling");
+    var boxes = document.getElementById("toggle-filters").querySelectorAll("input");
+    var tog = document.getElementById("toggle-all");
+    for(var i=0, n=boxes.length; i<n; i++) {
+        boxes[i].checked = tog.checked;
+    }
+};
+
+var cols = ["fulfilled", "missing", "failed"];
+
+var toggleRow = function toggleRow(rownum) {
+    console.log("toggling row");
+    var names = [];
+    for (c in cols) {
+        names.push(rownum + "-" + cols[c]);
+    }
+    var boxes = [];
+    for (var i=0, n=names.length; i<n; i++) {
+        boxes.push( document.getElementsByName(names[i])[0] );
+    }
+    var val = boxes[0].checked;
+    for(var i=0, n=boxes.length; i<n; i++) {
+        boxes[i].checked = !val;
+    }
+};
+
+var toggleCol = function toggleCol(name) {
+    console.log("toggling col");
+    var numRows = 7;
+    var names = [];
+    for (var i=0; i<numRows; i++) {
+        names.push(i.toString() + "-" + name);
+    }
+    var boxes = [];
+    for (var i=0, n=names.length; i<n; i++) {
+        boxes.push( document.getElementsByName(names[i])[0] );
+    }
+    var val = boxes[0].checked;
+    for(var i=0, n=boxes.length; i<n; i++) {
+        boxes[i].checked = !val;
+    }
+};
+</script>
 {% endblock %}
