--- a/templates/upload.html
+++ b/templates/upload.html
@@ -4,6 +4,10 @@
 
 {% block content %}
 <div align="center">
+    {% if err %}
+    <h2>Upload Failed!</h2>
+    <h3>Error: {{ err }}</h3>
+    {% endif %}
     {% if redir == 'upload' %}
     <h2> Upload an Excel File: </h2>
     {% elif redir == 'update_reqs' %}
