--- a/templates/class.html
+++ b/templates/class.html
@@ -33,7 +33,7 @@
         <input type="radio" name="logic" value="or">OR
         <table id="toggle-filters">
             <tr>
-                <th><input id="toggle-all" type="checkbox" onClick="toggleBoxes(this)" /></th>
+                <th><input id="toggle-all" type="checkbox" onClick="toggleBoxes(this)" checked="checked" /></th>
                 <th onClick="toggleCol('fulfilled')">Fulfilled</th>
                 <th onClick="toggleCol('missing')">Missing</th>
                 <th onClick="toggleCol('failed')">Failed</th>
