--- a/templates/upload.html
+++ b/templates/upload.html
@@ -8,7 +8,7 @@
     <form action="/upload/" method="POST" enctype="multipart/form-data">
         <input type="file" name="file" />
         <br>
-        <input type="submit"/>
+        <button class="submit" type="submit" name="action">Submit</button>
     </form>
 </div>
 
