Updated add student-osis functionality

--- a/templates/data.html
+++ b/templates/data.html
@@ -18,4 +18,14 @@
     Update graduation requirements in JSON file
 </a>
 
+<a class="icon" href="/update_students">
+    <img src="{{ url_for('static', filename='grad.png') }}" />
+    Update Student ID information
+</a>
+
+<a class="icon" href="/update_admins">
+    <img src="{{ url_for('static', filename='grad.png') }}" />
+    Update list of administrator emails
+</a>
+
 {% endblock %}
