--- a/templates/login.html
+++ b/templates/login.html
@@ -7,7 +7,7 @@
 <div id="login">
   <h2>Login</h2>
 
-  <div class="g-signin2" data-onsuccess="onSignIn" data-theme="dark"></div>
+  <div class="g-signin2" data-callback="signInCallback" data-onsuccess="onSignIn" data-theme="dark" data-immediate=false data-approvalprompt="force"></div>
 </div>
 {% endblock %}
 
