Added about page

--- a/templates/data.html
+++ b/templates/data.html
@@ -5,7 +5,7 @@
 {% block content %}
 <a class="icon" href="/upload">
     <img src="{{ url_for('static', filename='export.png') }}" />
-    Import course database from Excel file
+    Import transcript from Excel file
 </a>
 
 <a class="icon" href="{{ url_for('static', filename='reqs.json') }}">
