--- a/templates/master.html
+++ b/templates/master.html
@@ -37,8 +37,9 @@ function signInCallback() {
 
     <div class="navbar">
         <ul>
+            <li><a href="/about">About/Manual</a></li>
             <li><a href="/class"> Class View </a></li>
-            <li><a href="/data"> Database </a></li>
+            <li><a href="/data"> Manage Database </a></li>
             <li><a href="/logout"> Logout </a></li>
         </ul>
     </div>
