Minor grammar changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -6,7 +6,7 @@
 <h2>About</h2>
 <p>This tool is used to check if students are on track for graduation. It can be
 used by both administrators and students. The administrators can check if a
-student can graduate as well as filter classes based on their graduation status.
+student can graduate as well as filter through class lists of students based on their graduation status.
 They can also see which courses each of the students can take to fulfill those
 requirements, while the students can see where they themselves are with respect
 to graduation and see which courses they can take next semester. The site also
@@ -67,7 +67,7 @@ and the box on the top left selects/deselects the entire grid. The list of
 students is updated when one clicks on "Update" and can be downloaded as an
 Excel Spreadsheet if one clicks on "Export".</p>
 {% else %}
-<p>For students the process is pretty simple, one just log in with his/her
+<p>For students the process is pretty simple, one just logs in with his/her
 @stuy.edu email and will be redirected to his/her page. Click on any of the
 links on top (apart from About) and you will be redirected to a login page. For
 administrators, a more detailed manual will appear here once you log in.</p>
